kubernetes/yml/springbootkafkalistener.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: springbootkafkalistener
  labels:
    app: springbootkafkalistener
spec:
  serviceName: "springbootkafkalistener-hs"
  replicas: 1
  selector:
    matchLabels:
      app: springbootkafkalistener
  template:
    metadata:
      labels:
        app: springbootkafkalistener
    spec:
      containers:
      - name: springbootkafkalistener
        image: marcinkasinski/springbootkafkalistener
        imagePullPolicy: Always
        ports:
        - name: nodejs-port
          containerPort: 9191
        volumeMounts:
        - name: config-springbootkafkalistener-bootstrap-yml-cm
          mountPath: /usr/src/myapp/config/bootstrap.yml
          subPath: bootstrap.yml
        - name: config-volume-springbootkafkalistener-0-truststore-jks
          mountPath: /usr/src/myapp/config/truststore-springbootkafkalistener-0.jks
          subPath: truststore-springbootkafkalistener-0.jks
        - name: config-volume-springbootkafkalistener-0-keystore-jks
          mountPath: /usr/src/myapp/config/keystore-springbootkafkalistener-0.jks
          subPath: keystore-springbootkafkalistener-0.jks
      volumes:
        - name: config-springbootkafkalistener-bootstrap-yml-cm
          configMap:
            name: springbootkafkalistener-bootstrap-yml-cm
        - name: config-volume-springbootkafkalistener-0-truststore-jks
          configMap:
            name: truststore-springbootkafkalistener-0.jks
        - name: config-volume-springbootkafkalistener-0-keystore-jks
          configMap:
            name: keystore-springbootkafkalistener-0.jks            
---
apiVersion: v1
kind: Service
metadata:
  name: springbootkafkalistener-hs
  labels:
    app: springbootkafkalistener
spec:
  ports:
  - port: 9191
    targetPort: 9191
    name: server
  clusterIP: None
  selector:
    app: springbootkafkalistener
---
apiVersion: v1
kind: Service
metadata:
  name: springbootkafkalistener
spec:
  type: NodePort
  ports:
  - port: 9191
    nodePort: 31091
    targetPort: 9191
    protocol: TCP
    name: http
  selector:
    app: springbootkafkalistener
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: springbootkafkalistener-ingress
  annotations:
    ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - host: springbootkafkalistener
    http:
      paths:
      - path: /
        backend:
          serviceName: springbootkafkalistener
          servicePort: 9191
---
